module/main.tf
provider "aws" {
 profile = "default"
 region = "us-east-1"
 }

resource "aws_vpc" "vpc" {
 cidr_block = var.cidr_vpc
 enable_dns_support = true
 enable_dns_hostnames = true
 tags = {
  Name = var.env
  }
}
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.vpc.id
}
resource "aws_subnet" "subnet_public" {
 vpc_id = aws_vpc.vpc.id
 cidr_block = var.cidr_subnet
 map_public_ip_on_launch = "true"
 availability_zone = var.az
}
resource "aws_route_table" "rtb_public" {
 vpc_id = aws_vpc.vpc.id
 route {
  cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
  }
}
resource "aws_route_table_association" "rta_subnet" {
 subnet_id = aws_subnet.subnet_public.id
 route_table_id = aws_route_table.rtb_public.id
}
resource "aws_security_group" "sg_22" {
name = "sg_22"
vpc_id = aws_vpc.vpc.id
ingress {
 from_port = 22
 to_port = 22
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
  }
egress {
 from_port = 0
 to_port = 0 
 protocol = "-1"
 cidr_blocks = ["0.0.0.0/0"]
 }
}
